--- a/src/html/devIndex.html
+++ b/src/html/devIndex.html
@@ -30,11 +30,6 @@
                     <span>,您好！欢迎来到维工坊开发者中心！</span>
                 </div>
                 <div class="line-two">
-                    <a class="personal-center">
-                        <img src="./../asset/devIndex/u472.png" alt="">
-                        <span>个人中心</span>
-                    </a>
-                    <a class="split-line">|</a>
                     <a class="publish-product">
                         <img src="./../asset/devIndex/u472.png" alt="">
                         <span>
@@ -74,12 +69,11 @@
     </div>
     <div class="nav-contact">
         <div class="online-box-detail detail1">
-            <p>QQ ：265833733</p>
-            <p>微信：lostyoulostall</p>
+            <p>QQ ：2671569958</p>
+            <p>微信：weigongfang</p>
         </div>
         <div class="online-box-detail detail2">
-            <p>手机：13402882309</p>
-            <p>座机：028-87639021</p>
+            <p>手机：13056667048</p>
         </div>
         <ul>
             <li class="first-li">
@@ -91,11 +85,13 @@
                 <p>客服电话</p>
             </li>
             <li class="third-li">
-                <img src="./../asset/index/u80.png" alt="">
-                <p>会员中心</p>
+                <a href="./memberCenter.html" style="text-decoration: none;">
+                    <img src="./../asset/index/u82.png" alt="">
+                    <p>会员中心</p>
+                </a>
             </li>
             <li class="top-btn">
-                <img src="./../asset/index/u82.png" alt="">
+                <img src="./../asset/index/u80.png" alt="">
                 <p>回到顶部</p>
             </li>
         </ul>
