--- a/src/html/index.html
+++ b/src/html/index.html
@@ -32,9 +32,9 @@
                 <div class="line-two">
                     <a class="developer">开发者中心</a>
                     <a class="split-line">|</a>
-                    <a class="login" href="./login.html">会员登录</a>
+                    <a class="login" href="./login.html" target="_blank">会员登录</a>
                     <a class="split-line login">|</a>
-                    <a href="./register.html">免费注册</a>
+                    <a href="./register.html" target="_blank">免费注册</a>
                 </div>
             </div>
         </div>
@@ -46,41 +46,13 @@
                 </li>
             </ul>
         </div>
-        <iframe src="/rankingList.html" frameborder="0"></iframe>
+        <iframe src="./rankingList.html" frameborder="0"></iframe>
         <div class="container-fluid content">
             <div class="foot text-center">
                 <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
                 <p>成都联助科技</p>
             </div>
         </div>
-    </div>
-    <div class="nav-contact">
-        <div class="online-box-detail detail1">
-            <p>QQ ：265833733</p>
-            <p>微信：lostyoulostall</p>
-        </div>
-        <div class="online-box-detail detail2">
-            <p>手机：13402882309</p>
-            <p>座机：028-87639021</p>
-        </div>
-        <ul>
-            <li class="first-li">
-                <img src="./../asset/index/u76.png" alt="">
-                <p>在线客服</p>
-            </li>
-            <li class="second-li">
-                <img src="./../asset/index/u78.png" alt="">
-                <p>客服电话</p>
-            </li>
-            <li class="third-li">
-                <img src="./../asset/index/u80.png" alt="">
-                <p>会员中心</p>
-            </li>
-            <li class="top-btn">
-                <img src="./../asset/index/u82.png" alt="">
-                <p>回到顶部</p>
-            </li>
-        </ul>
     </div>
     <div class="remodal" data-remodal-id="indexModal">
         <p class="modal-text"></p>
