--- a/src/html/searchList.html
+++ b/src/html/searchList.html
@@ -11,6 +11,7 @@
     <div class="document">
         <div class="content">
             <div class="row vr-list"></div>
+            <p class="noData text-center">抱歉，没有查询到数据...</p>
         </div>
     </div>
 </body>
