--- a/src/html/vrModel.html
+++ b/src/html/vrModel.html
@@ -33,7 +33,7 @@
                                         <span>KB</span>
                                     </div>
                                     <div>
-                                        <span><img src="./../asset/vrModel/u502.png" alt=""> 收藏模型：</span>
+                                        <span><img class="add-collection" src="./../asset/vrModel/u502.png" alt=""> 收藏模型：</span>
                                         <span class="collection"></span>
                                         <span>人气</span>
                                     </div>
@@ -54,7 +54,7 @@
                                         <span>人气</span>
                                     </div>
                                     <div>
-                                        <span><img src="./../asset/vrModel/u513.png" alt=""> 点赞：</span>
+                                        <span><img class="add-praise" src="./../asset/vrModel/u513.png" alt=""> 点赞：</span>
                                         <span class="praise"></span>
                                         <span>人气</span>
                                     </div>
@@ -83,10 +83,6 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="foot text-center">
-                <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
-                <p>成都联助科技</p>
             </div>
         </div>
     </body>
