--- a/src/html/vrproduct.html
+++ b/src/html/vrproduct.html
@@ -9,7 +9,7 @@
     <body>
         <div class="document">
             <div class="content">
-                <p class="title">钓鱼VR游戏</p>
+                <p class="title"></p>
                 <div class="detail">
                     <div class="video-box">
                         <video id="video" width="100%" height="100%" poster="" controls preload x5-playsinline="" playsinline="" controlslist="nodownload"
@@ -19,12 +19,12 @@
                         <div class="video-number">
                             <ul class="list-unstyled list-inline">
                                 <li>
-                                    <img src="./../asset/vrproduct/u439.png" alt="">
+                                    <img class="add-praise" src="./../asset/vrproduct/u439.png" alt="">
                                     <span class="praise"></span>
                                     <span>人点赞</span>
                                 </li>
                                 <li>
-                                    <img src="./../asset/vrproduct/u437.png" alt="">
+                                    <img class="add-collection" src="./../asset/vrproduct/u437.png" alt="">
                                     <span class="collection"></span>
                                     <span>人收藏</span>
                                 </li>
@@ -74,10 +74,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="foot text-center">
-                <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
-                <p>成都联助科技</p>
             </div>
         </div>
     </body>
