--- a/src/html/vrproduct.html
+++ b/src/html/vrproduct.html
@@ -12,7 +12,7 @@
                 <p class="title"></p>
                 <div class="detail">
                     <div class="video-box">
-                        <video id="video" width="100%" height="100%" poster="" controls preload x5-playsinline="" playsinline="" controlslist="nodownload"
+                        <video id="video" width="100%" height="100%" preload="auto" poster="" controls preload x5-playsinline="" playsinline="" controlslist="nodownload"
                             webkit-playsinline="true" style="width: 100%; height: 100%; background-color: rgb(0, 0, 0);">
                             <source src="">
                         </video>
@@ -70,7 +70,7 @@
                             </p>
                         </div>
                         <div class="video-text">
-                            <p class="proIntro">一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。</p>
+                            <p class="proIntro"></p>
                         </div>
                     </div>
                 </div>
