--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -25,27 +25,27 @@
                     <ul class="list-unstyled">
                         <li>
                             <img src="./../asset/memberCenter/nav1.png" alt="">
-                            <a href="">我的收藏夹</a>
+                            <a href="./memberCenterList.html?iframeType=0" target="listIframe">我的收藏夹</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav2.png" alt="">
-                            <a href="">我的浏览足迹</a>
+                            <a href="./memberCenterList.html?iframeType=1" target="listIframe">我的浏览足迹</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav3.png" alt="">
-                            <a href="">我的点赞</a>
+                            <a href="./memberCenterList.html?iframeType=2" target="listIframe">我的点赞</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav4.png" alt="">
-                            <a href="">我购买的VR模型</a>
+                            <a href="./memberCenterList.html?iframeType=3" target="listIframe">我购买的VR模型</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav5.png" alt="">
-                            <a href="">我发布的VR模型</a>
+                            <a href="./memberCenterList.html?iframeType=4" target="listIframe">我发布的VR模型</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav6.png" alt="">
-                            <a href="">我发布的VR软件</a>
+                            <a href="./memberCenterList.html?iframeType=5" target="listIframe">我发布的VR软件</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav7.png" alt="">
@@ -57,7 +57,7 @@
                         </li>
                     </ul>
                 </div>
-                <iframe src="./memberCenterList.html" frameborder="0"></iframe>
+                <iframe id="listIframe" name="listIframe" src="./memberCenterList.html?iframeType=0" frameborder="0"></iframe>
             </div>
         </div>
         <div class="foot text-center">
