--- a/src/html/memberCenterList.html
+++ b/src/html/memberCenterList.html
@@ -10,6 +10,7 @@
 <body>
     <div class="content">
         <div class="row vr-list"></div>
+        <p style="display: none; color: red;" class="empty-data text-center">暂时没有查询到数据...</p>
     </div>
 </body>
 
