--- a/src/html/register.html
+++ b/src/html/register.html
@@ -87,7 +87,7 @@
                             <span style="color: red">*</span>
                             <span class="label">用户名</span>
                             <div class="input-box text-left">
-                                <input class="group-name" type="text" placeholder="您的账号名和登录名">
+                                <input class="group-name" type="text" maxlength="20" placeholder="您的账号名和登录名">
                                 <br>
                                 <label class="group-name-notice"></label>
                             </div>
@@ -179,7 +179,7 @@
                             <span style="color: red">*</span>
                             <span class="label">设置密码</span>
                             <div class="input-box text-left">
-                                <input class="group-password" type="password" placeholder="建议6至20位字母、数据组成">
+                                <input class="group-password" type="password" maxlength="20" placeholder="建议6至20位字母、数据组成">
                                 <br>
                                 <label class="group-password-notice"></label>
                             </div>
@@ -188,7 +188,7 @@
                             <span style="color: red">*</span>
                             <span class="label">确认密码</span>
                             <div class="input-box text-left">
-                                <input class="group-confirm" type="password" placeholder="请再次输入密码">
+                                <input class="group-confirm" type="password" maxlength="20" placeholder="请再次输入密码">
                                 <br>
                                 <label class="group-confirm-notice"></label>
                             </div>
