--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -53,7 +53,7 @@
                         </li>
                         <li style="border: none">
                             <img src="./../asset/memberCenter/nav8.png" alt="">
-                            <a href="">平台服务协议</a>
+                            <a href="./agreementDescription.html" target="listIframe">平台服务协议</a>
                         </li>
                     </ul>
                 </div>
