--- a/src/html/devIndex.html
+++ b/src/html/devIndex.html
@@ -33,19 +33,26 @@
                     <a class="publish-product">
                         <img src="./../asset/devIndex/u472.png" alt="">
                         <span>
+                            <a href="./index.html">VR首页</a>
+                        </span>
+                    </a>
+                    <a class="split-line">|</a>
+                    <a class="publish-product">
+                        <img src="./../asset/devIndex/u469.png" alt="">
+                        <span>
                             <a href="./vrpublish.html">VR产品发布</a>
                         </span>
                     </a>
                     <a class="split-line">|</a>
                     <a class="publish-model">
-                        <img src="./../asset/devIndex/u472.png" alt="">
+                        <img src="./../asset/devIndex/u477.png" alt="">
                         <span>
                             <a href="./vrModelpublish.html">VR模型发布</a>
                         </span>
                     </a>
                     <a class="split-line">|</a>
                     <a class="recharge">
-                        <img src="./../asset/devIndex/u472.png" alt="">
+                        <img src="./../asset/devIndex/u466.png" alt="">
                         <span>维币充值</span>
                     </a>
                 </div>
