--- a/src/html/index.html
+++ b/src/html/index.html
@@ -46,7 +46,7 @@
                 </li>
             </ul>
         </div>
-        <iframe src="./vrModel.html" frameborder="0" scrolling="no"></iframe>
+        <iframe src="./rankingList.html" frameborder="0" scrolling="no"></iframe>
         <div class="container-fluid content">
             <div class="foot text-center">
                 <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
