--- a/src/html/memberCenterList.html
+++ b/src/html/memberCenterList.html
@@ -9,8 +9,18 @@
 
 <body>
     <div class="content">
-        <div class="row vr-list"></div>
-        <p style="display: none; color: red;" class="empty-data text-center">暂时没有查询到数据...</p>
+        <div>
+            <img src="./../asset/memberCenter/u282.png" alt="">
+            <span>VR软件</span>
+        </div>
+        <div class="row vr-list list-first"></div>
+        <p style="display: none; color: red;" class="empty-data1 text-center">暂时没有查询到数据...</p>
+        <div>
+            <img src="./../asset/memberCenter/u283.png" alt="">
+            <span>VR模型</span>
+        </div>
+        <div class="row vr-list list-second"></div>
+        <p style="display: none; color: red;" class="empty-data2 text-center">暂时没有查询到数据...</p>
     </div>
 </body>
 
