--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -41,11 +41,11 @@
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav5.png" alt="">
-                            <a href="./memberCenterList.html?iframeType=4" target="listIframe">我发布的VR模型</a>
+                            <a href="./tableModel.html?iframeType=4" target="listIframe">我发布的VR模型</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav6.png" alt="">
-                            <a href="./memberCenterList.html?iframeType=5" target="listIframe">我发布的VR软件</a>
+                            <a href="./tableSoftware.html" target="listIframe">我发布的VR软件</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav7.png" alt="">
