--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="document">
+    <div class="document document-member" style="width: 1412px;">
         <div class="member-box">
             <div class="member-header">
                 <div class="logo">
@@ -49,7 +49,7 @@
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav7.png" alt="">
-                            <a href="">充值中心</a>
+                            <a href="./recharge.html" target="listIframe">充值中心</a>
                         </li>
                         <li style="border: none">
                             <img src="./../asset/memberCenter/nav8.png" alt="">
