add modify password

--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="document document-member" style="width: 1412px;">
+    <div class="document document-member" style="width: 1612px;">
         <div class="member-box">
             <div class="member-header">
                 <div class="logo">
@@ -16,6 +16,8 @@
                 </div>
                 <p class="font-30">会员中心</p>
                 <div class="to-index">
+                    <span class="user-name font-bold"></span>
+                    <br>
                     <img src="./../asset/register/u688.png" alt="">
                     <a class="font-bold" href="index.html" class="font-bold">维工坊首页</a>
                 </div>
