--- a/src/html/devIndex.html
+++ b/src/html/devIndex.html
@@ -40,14 +40,14 @@
                     <a class="publish-product">
                         <img src="./../asset/devIndex/u469.png" alt="">
                         <span>
-                            <a href="./vrpublish.html">VR产品发布</a>
+                            <a href="./vrpublish.html" target="devIframe">VR产品发布</a>
                         </span>
                     </a>
                     <a class="split-line">|</a>
                     <a class="publish-model">
                         <img src="./../asset/devIndex/u477.png" alt="">
                         <span>
-                            <a href="./vrModelpublish.html">VR模型发布</a>
+                            <a href="./vrModelpublish.html" target="devIframe">VR模型发布</a>
                         </span>
                     </a>
                     <a class="split-line">|</a>
@@ -66,7 +66,7 @@
                 </li>
             </ul>
         </div>
-        <iframe src="/rankingList.html" frameborder="0"></iframe>
+        <iframe id="devIframe" name="devIframe" src="/rankingList.html" frameborder="0"></iframe>
         <div class="container-fluid content">
             <div class="foot text-center">
                 <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
