--- a/src/html/vrpublish.html
+++ b/src/html/vrpublish.html
@@ -71,6 +71,9 @@
 
                     </div>
                 </div>
+                <div class="row">
+                    <button class="btn post-btn">保存</button>
+                </div>
             </form>
         </div>
         <div class="foot text-center">
