--- a/src/html/devIndex.html
+++ b/src/html/devIndex.html
@@ -103,10 +103,9 @@
             </li>
         </ul>
     </div>
-    <div class="remodal" data-remodal-id="indexModal">
-        <p class="modal-text"></p>
-        <br>
-        <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
+    <div class="remodal" data-remodal-id="updateModal">
+        <h3>上传中(请勿刷新页面)上传成功后会自动关闭弹框。</h3>
+        <p>已上传<span class="percent"></span> %</p>
     </div>
 </body>
 
