--- a/src/html/devIndex.html
+++ b/src/html/devIndex.html
@@ -103,7 +103,7 @@
             </li>
         </ul>
     </div>
-    <div class="remodal" data-remodal-id="updateModal">
+    <div class="remodal" data-remodal-id="updateModal" data-remodal-options="closeOnEscape:false,closeOnOutsideClick: false">
         <h3>上传中(请勿刷新页面)上传成功后会自动关闭弹框。</h3>
         <p>已上传<span class="percent"></span> %</p>
     </div>
