--- a/src/html/vrpublish.html
+++ b/src/html/vrpublish.html
@@ -68,7 +68,18 @@
                         <input type="file" class="photo-file">
                     </div>
                     <div class="col-md-12 img-list">
-
+                        <ul class="list-unstyled">
+                            <li>
+                                <span>1.png</span>
+                                <input class="group" id="img-1" type="radio" name="type" value="0">
+                                <label class="group" for="img-1">是否显示在首页</label>
+                            </li>
+                            <li>
+                                <span>2.png</span>
+                                <input class="group" id="img-2" type="radio" name="type" value="1">
+                                <label class="group" for="img-2">是否显示在首页</label>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="row">
