--- a/src/html/vrpublish.html
+++ b/src/html/vrpublish.html
@@ -17,17 +17,17 @@
                     <div class="col-md-4">
                         <label>
                             <span>*</span>VR产品名称</label>
-                        <input type="text" placeholder="请输入产品名称">
+                        <input class="vr-name" type="text" placeholder="请输入产品名称">
                     </div>
                     <div class="col-md-4">
                         <label>
                             <span>*</span>软件大小（KB）</label>
-                        <input type="text" placeholder="请输入软件大小">
+                        <input class="soft-size" type="text" placeholder="请输入软件大小">
                     </div>
                     <div class="col-md-4">
                         <label>
                             <span>*</span>产品类型</label>
-                        <input type="text" placeholder="请输入产品类型">
+                        <input class="product-type" type="text" placeholder="请输入产品类型">
                     </div>
                 </div>
                 <div class="row">
@@ -69,21 +69,11 @@
                     </div>
                     <div class="col-md-12 img-list">
                         <ul class="list-unstyled">
-                            <li>
-                                <span>1.png</span>
-                                <input class="group" id="img-1" type="radio" name="type" value="0">
-                                <label class="group" for="img-1">是否显示在首页</label>
-                            </li>
-                            <li>
-                                <span>2.png</span>
-                                <input class="group" id="img-2" type="radio" name="type" value="1">
-                                <label class="group" for="img-2">是否显示在首页</label>
-                            </li>
                         </ul>
                     </div>
                 </div>
-                <div class="row">
-                    <button class="btn post-btn">保存</button>
+                <div class="row text-center">
+                    <button class="btn btn-primary post-btn">保存</button>
                 </div>
             </form>
         </div>
