--- a/src/html/vrModelpublish.html
+++ b/src/html/vrModelpublish.html
@@ -71,8 +71,12 @@
                         <input type="file" class="photo-file">
                     </div>
                     <div class="col-md-12 img-list">
-
+                        <ul class="list-unstyled">
+                        </ul>
                     </div>
+                </div>
+                <div class="row text-center">
+                    <button class="btn btn-primary post-btn">保存</button>
                 </div>
             </form>
         </div>
