--- a/src/html/vrModelpublish.html
+++ b/src/html/vrModelpublish.html
@@ -11,13 +11,13 @@
 <body>
     <div class="document">
         <div class="content">
-            <p class="title">VR产品发布</p>
+            <p class="title">VR模型发布</p>
             <form id="publish" enctype='multipart/form-data'>
                 <div class="row">
                     <div class="col-md-4">
                         <label>
                             <span>*</span>VR模型名称</label>
-                        <input class="name" type="text" placeholder="请输入模型名称">
+                        <input class="vr-name" type="text" placeholder="请输入模型名称">
                     </div>
                     <div class="col-md-8">
                         <label>
@@ -79,10 +79,6 @@
                     <button class="btn btn-primary post-btn">保存</button>
                 </div>
             </form>
-        </div>
-        <div class="foot text-center">
-            <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
-            <p>成都联助科技</p>
         </div>
     </div>
 </body>
