--- a/src/html/vrModelpublish.html
+++ b/src/html/vrModelpublish.html
@@ -46,10 +46,7 @@
                         <label>
                             <span>*</span>VR模型类型</label>
                             <select class="model-type">
-                                <option value="1">类型1</option>
-                                <option value="2">类型2</option>
-                                <option value="3">类型3</option>
-                                <option value="4">类型4</option>
+                                <option value="">请选择类型</option>
                             </select>
                     </div>
                 </div>
