--- a/src/html/vrModelpublish.html
+++ b/src/html/vrModelpublish.html
@@ -12,7 +12,7 @@
     <div class="document">
         <div class="content">
             <p class="title">VR模型发布</p>
-            <form id="publish" enctype='multipart/form-data'>
+            <div id="publish">
                 <div class="row">
                     <div class="col-md-4">
                         <label>
@@ -75,7 +75,7 @@
                 <div class="row text-center">
                     <button class="btn btn-primary post-btn">保存</button>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </body>
