--- a/src/html/devIndex.html
+++ b/src/html/devIndex.html
@@ -51,7 +51,7 @@
                         </span>
                     </a>
                     <a class="split-line">|</a>
-                    <a class="recharge">
+                    <a class="recharge" href="./memberCenter.html?recharge=true">
                         <img src="./../asset/devIndex/u466.png" alt="">
                         <span>维币充值</span>
                     </a>
