--- a/src/html/login.html
+++ b/src/html/login.html
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         <div class="line-four">
-                            <a class="forgot-password font-14 font-bold">忘记密码？</a>
+                            <a class="forgot-password font-14 font-bold" href="./newPassword.html">忘记密码？</a>
                             <p class="login-msg text-center"></p>
                         </div>
                         <div class="line-five">
