--- a/src/html/vrpublish.html
+++ b/src/html/vrpublish.html
@@ -53,6 +53,11 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-dm-12">
+                        <p style="color: red; margin: 0 0 0 110px;">注：自行增加对视频文件、DEMO文件水印或标识，防止被盗用，若出现法律纠纷，自行负责。</p>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-12">
                         <label>
                             <span>*</span>产品概述</label>
