--- a/src/html/agreementDescription.html
+++ b/src/html/agreementDescription.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>用户协议</title>
   </head>
-  <body>
+  <body oncontextmenu = "return false" >
     <h3 style="text-align: center">维工坊网络服务使用协议</h3>
     <div class="text text-left">
         <h4>1.提示条款</h4>
