--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -7,7 +7,7 @@
     <title>会员中心</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="document document-member" style="width: 1612px;">
         <div class="member-box">
             <div class="member-header">
