--- a/src/html/memberCenterList.html
+++ b/src/html/memberCenterList.html
@@ -7,7 +7,7 @@
     <title>VR</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="content">
         <div class="vr-Software">
             <div>
