--- a/src/html/newPassword.html
+++ b/src/html/newPassword.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="document">
         <div class="member-header">
             <div class="logo">
