--- a/src/html/vrModelpublish.html
+++ b/src/html/vrModelpublish.html
@@ -8,7 +8,7 @@
     <title>模型发布</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="document">
         <div class="content">
             <p class="title">VR模型发布</p>
