--- a/src/html/vrpublish.html
+++ b/src/html/vrpublish.html
@@ -8,7 +8,7 @@
     <title>VR产品发布</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="document">
         <div class="content">
             <p class="title">VR产品发布</p>
