--- a/src/html/classifylist.html
+++ b/src/html/classifylist.html
@@ -7,7 +7,7 @@
     <title>VR</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false">
     <div class="document">
         <div class="header">
             <p>
