--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
     <title>产品首页</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="document">
         <div class="header">
             <img class="logo" src="./../asset/img/logo.png" alt="">
