--- a/src/html/login.html
+++ b/src/html/login.html
@@ -8,7 +8,7 @@
     <title>登录</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="document">
         <div class="container-fluid">
             <div class="row login">
