--- a/src/html/rankingList.html
+++ b/src/html/rankingList.html
@@ -1,4 +1,4 @@
-<div class="container-fluid content">
+<div class="container-fluid content" oncontextmenu = "return false" >
     <div class="row ranking-1 ranking">
         <div class="title-box">
             <img src="./../asset/rankingList/u122.png" alt="">
