--- a/src/html/recharge.html
+++ b/src/html/recharge.html
@@ -7,7 +7,7 @@
     <title>VR</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="content">
         <p>
             <span>充值账号：</span>
