--- a/src/html/register.html
+++ b/src/html/register.html
@@ -7,7 +7,7 @@
     <title>注册</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="document">
         <div class="register-box">
             <div class="register-header">
