--- a/src/html/tableModel.html
+++ b/src/html/tableModel.html
@@ -7,7 +7,7 @@
     <title>VR</title>
 </head>
 
-<body>
+<body oncontextmenu = "return false" >
     <div class="content">
         <table class="table text-center">
             <thead style="background: #F5F5F5;color: #999;">
