--- a/src/html/vrModel.html
+++ b/src/html/vrModel.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>VR模型</title>
 
-    <body>
+    <body oncontextmenu = "return false" >
         <div class="document">
             <div class="content">
                 <div class="detail">
