--- a/src/html/vrproduct.html
+++ b/src/html/vrproduct.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>VR产品</title>
 
-    <body>
+    <body oncontextmenu = "return false" >
         <div class="document">
             <div class="content">
                 <p class="title"></p>
