--- a/src/html/modelManagement.html
+++ b/src/html/modelManagement.html
@@ -11,44 +11,44 @@
 <body>
     <div class="row">
         <div class="col-md-2">
-            <select class="form-control">
-                <option value="0">ID号</option>
-                <option value="1">名称</option>
-                <option value="2">类型</option>
-                <option value="3">开发者姓名</option>
+            <select class="form-control name">
+                <option value="10">ID号</option>
+                <option value="20">名称</option>
+                <option value="30">类型</option>
+                <option value="40">开发者姓名</option>
             </select>
         </div>
         <div class="col-md-2">
-            <input type="text" class="form-control">
+            <input type="text" class="form-control value">
         </div>
         <div class="col-md-1">
-            <button class="btn btn-primary">查询</button>
+            <button class="btn btn-primary check-btn">查询</button>
         </div>
         <div class="col-md-1 text-center">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox"> 未审核
-                </label>
-            </div>
-        </div>
-        <div class="col-md-1 text-center">
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox"> 审核通过
+                    <input type="checkbox" class="checkbox-1"> 未审核
                 </label>
             </div>
         </div>
         <div class="col-md-2 text-center">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox"> 审核不通过
+                    <input type="checkbox" class="checkbox-2"> 审核通过
+                </label>
+            </div>
+        </div>
+        <div class="col-md-2 text-center">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" class="checkbox-3"> 审核不通过
                 </label>
             </div>
         </div>
         <div class="col-md-1 text-center">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox"> 已下架
+                    <input type="checkbox" class="checkbox-4"> 已下架
                 </label>
             </div>
         </div>
@@ -61,7 +61,7 @@
                         <td>
                             <div class="checkbox">
                                 <label>
-                                    <input type="checkbox"> 全选
+                                    <input class="checkbox-all" type="checkbox"> 全选
                                 </label>
                             </div>
                         </td>
@@ -74,25 +74,23 @@
                         <td>查看明细</td>
                     </tr>
                 </thead>
-                <tbody class="table-title">
-                    <tr>
-                        <td>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox">
-                                </label>
-                            </div>
-                        </td>
-                        <td>ID号</td>
-                        <td>名称</td>
-                        <td>类型</td>
-                        <td>开发者</td>
-                        <td>价格</td>
-                        <td>发布时间</td>
-                        <td><button class="btn btn-primary">明细</button></td>
-                    </tr>
+                <tbody class="table-title tbody-list">
                 </tbody>
             </table>
+        </div>
+        <div class="col-md-12">
+            <p class="noData text-center" style="color: red">抱歉，没有查询到数据...</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="page-box">
+            <div class="page-detail">
+                <span class="page-num">1</span>/
+                <span class="total-pageNum">1</span>
+                <span class="total-num">0</span>
+                <span>条</span>
+            </div>
+            <div class="vr-pagination"></div>
         </div>
     </div>
 </body>
